
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int getkey () ;
 int mrand () ;
 int msrand (int ) ;

void BOcrypt(unsigned char *buff, int len)
{
 int y;

 if (!len)
  return;

 msrand(getkey());
 for (y = 0; y < len; y++)
  buff[y] = buff[y] ^ (mrand()%256);
}
